# c-core-py

./: .gitignore  README.md  pyproject.toml
src/c_core_py/: examples.py  firestore.py  geohash.py
tests/: test_geohash.py
